--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.tbump]
-github_url = "https://github.com/pythoninja/sshconf-generator"
+github_url = "https://github.com/pythoninja/sshgen"
 
 [tool.tbump.version]
 current = "0.1.0"
