--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,10 @@ src = "README.md"
 search = "Current version: v{current_version}"
 
 [[tool.tbump.file]]
+src = "README.md"
+search = "@v0.1.0"
+
+[[tool.tbump.file]]
 src = "sshgen/__init__.py"
 search = "__version__ = '{current_version}'"
 
