ci: lint on toml and lock changes

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -5,10 +5,14 @@ on:
     paths:
       - sshgen/**
       - tests/**
+      - pyproject.toml
+      - poetry.lock
   pull_request:
     paths:
       - sshgen/**
       - tests/**
+      - pyproject.toml
+      - poetry.lock
 
 jobs:
   ruff:
