--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,10 +65,52 @@ cmd = "git cliff --tag {new_version} --output CHANGELOG.md"
 
 [tool.ruff]
 exclude = []
-select = ["B", "C9", "E", "F", "G", "I", "ISC", "PIE", "PL", "TID", "W", "YTT"]
+select = [
+    "A",    # flake8-builtins
+    "B",    # flake8-bugbear
+    "C4",   # flake8-comprehensions
+    "C90",  # mccabe
+    "E",    # pycodestyle - error
+    "F",    # Pyflakes
+    "G",    # flake8-logging-format
+    "I",    # isort
+    "N",    # pep8-naming
+    "Q",    # flake8-quotes
+    "S",    # flake8-bandit
+    "W",    # pycodestyle - warning
+    "EM",   # flake8-errmsg
+    "ARG",  # flake8-unused-arguments
+    "ANN",  # flake8-annotations
+    "BLE",  # flake8-blind-except
+    "COM",  # flake8-commas
+    "FURB", # refurb
+    "LOG",  # flake8-logging
+    "ISC",  # flake8-implicit-str-concat
+    "PL",   # Pylint
+    "PT",   # flake8-pytest-style
+    "PGH",  # pygrep-hooks
+    "PIE",  # flake8-pie
+    "PTH",  # flake8-use-pathlib
+    "PERF", # Perflint
+    "SLF",  # flake8-self
+    "SIM",  # flake8-simplify
+    "T20",  # flake8-print
+    "TD",   # flake8-todos
+    "TID",  # flake8-tidy-imports
+    "TRY",  # tryceratops
+    "UP",   # pyupgrade
+    "YTT"   # flake8-2020
+]
 ignore = []
 line-length = 120
 target-version = "py312"
+preview = true
 
 [tool.ruff.pylint]
 max-args = 5
+
+[tool.ruff.flake8-quotes]
+docstring-quotes = "double"
+inline-quotes = "single"
+multiline-quotes = "single"
+avoid-escape = false
