revert: change type of quotes (experimentally)
This reverts commit 08dd7d0353039b52ded36b12f220444d917412e6.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,8 +108,8 @@ preview = true
 [tool.ruff.pylint]
 max-args = 5
 
-#[tool.ruff.flake8-quotes]
-#docstring-quotes = "double"
-#inline-quotes = "single"
-#multiline-quotes = "single"
-#avoid-escape = false
+[tool.ruff.flake8-quotes]
+docstring-quotes = "double"
+inline-quotes = "single"
+multiline-quotes = "single"
+avoid-escape = false
