feat: skip selected hosts with new `_meta` option

--- a/examples/hosts.yml
+++ b/examples/hosts.yml
@@ -7,15 +7,27 @@ group1: # host_group
         _auth_type: IdentityAgent
         _auth_path: ~/.1password/agent.sock
         _aliases: [ "base", "another-alias" ]
+        _skip: true
 
     host2:
       ansible_host: 127.0.0.2
       ansible_user: manager
       ansible_password:
+      _meta:
+        _skip: true
 
 group2:
   hosts:
-    another_host1:
+    host3:
       ansible_host: 172.19.0.1
       ansible_user: postgres
       ansible_password:
+
+    host4:
+        ansible_host: 172.99.99.99
+        ansible_user: postgres
+        _meta:
+          _auth_type: IdentityAgent
+          _auth_path: ~/.1password/agent.sock
+          _aliases: [ "base", "another-alias" ]
+          _skip: false
