--- a/examples/hosts.yml
+++ b/examples/hosts.yml
@@ -13,6 +13,7 @@ group1: # host_group
       ansible_host: 127.0.0.2
       ansible_user: manager
       ansible_password:
+      ansible_port: 19020
       _meta:
         _skip: true
 
@@ -22,6 +23,7 @@ group2:
       ansible_host: 172.19.0.1
       ansible_user: postgres
       ansible_password:
+      ansible_port: 19222
 
     host4:
         ansible_host: 172.99.99.99
