--- a/sshgen/templates/ssh_config.template
+++ b/sshgen/templates/ssh_config.template
@@ -1,4 +1,5 @@
 Host {{ host }} {{ host_alias }} # {{ host_comment }}
     HostName {{ hostname }}
     User {{ ssh_user }}
+    {{ port }}
     {{ identification }}
