docs: update readme example file

--- a/examples/hosts.yml
+++ b/examples/hosts.yml
@@ -7,7 +7,7 @@ group1: # host_group
         _auth_type: IdentityAgent
         _auth_path: ~/.1password/agent.sock
         _aliases: [ "base", "another-alias" ]
-        _skip: true
+        _skip: false
 
     host2:
       ansible_host: 127.0.0.2
@@ -31,5 +31,5 @@ group2:
         _meta:
           _auth_type: IdentityAgent
           _auth_path: ~/.1password/agent.sock
-          _aliases: [ "base", "another-alias" ]
+          _aliases: [ "postgres-server" ]
           _skip: false
