--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ typer = "^0.9.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "*"
+tbump = "^6.11.0"
 
 [build-system]
 requires = ["poetry-core"]
