--- a/pyproject.toml
+++ b/pyproject.toml
@@ -106,13 +106,13 @@ select = [
     "UP",   # pyupgrade
     "YTT"   # flake8-2020
 ]
-ignore = ["ANN101", "ANN204", "ARG001", "UP007"]
+ignore = ["ANN101", "ANN204", "ARG001", "UP007", "COM812", "ISC001"]
 
 [tool.ruff.lint.pylint]
 max-args = 5
 
 [tool.ruff.lint.flake8-quotes]
-docstring-quotes = "double"
-inline-quotes = "single"
-multiline-quotes = "single"
 avoid-escape = false
+
+[tool.ruff.format]
+quote-style = "double"
