chore(deps): add pre-commit in dev group

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ typer = "^0.9.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "*"
+pre-commit = "^3.6.2"
 
 [build-system]
 requires = ["poetry-core"]
