--- a/cliff.toml
+++ b/cliff.toml
@@ -62,18 +62,19 @@ commit_preprocessors = [
 ]
 # regex for parsing and grouping commits
 commit_parsers = [
-    { message = "^feat",                group = "<!-- 0 --> Features" },
-    { message = "^fix",                 group = "<!-- 1 --> Bug Fixes" },
-    { message = "^refactor",            group = "<!-- 2 --> Refactor" },
-    { message = "^test",                group = "<!-- 3 --> Testing" },
-    { message = "^chore\\(dev\\):",     group = "<!-- 4 --> Development" },
-    { message = "^chore\\(deps|deps-dev\\):", skip = true },
-    { message = "^perf",                group = "Performance", skip = true },
-    { message = "^style",               group = "Styling", skip = true },
-    { message = "^chore\\(release\\): v", skip = true },
-    { message = "^chore|ci",            group = "<!-- 6 --> Miscellaneous Tasks" },
-    { message = "^doc",                 group = "<!-- 7 --> Documentation" },
-    { body = ".*security",              group = "Security" },
+    { message = "^feat",                        group = "<!-- 0 --> Features" },
+    { message = "^fix",                         group = "<!-- 1 --> Bug Fixes" },
+    { message = "^refactor",                    group = "<!-- 2 --> Refactor" },
+    { message = "^test",                        group = "<!-- 3 --> Testing" },
+    { message = "^chore\\(dev\\):",             group = "<!-- 4 --> Development" },
+    { message = "^chore\\(deps|deps-dev\\):",   skip = true },
+    { message = "^perf",                        skip = true },
+    { message = "^style",                       skip = true },
+    { message = "^chore\\(release\\): v",       skip = true },
+    { message = "^chore|ci",                    group = "<!-- 6 --> Miscellaneous Tasks" },
+    { message = "^docs:|doc:",                  group = "<!-- 7 --> Documentation" },
+    { message = "^docs\\(changelog\\):",        skip = true },
+    { body = ".*security",                      group = "<!-- 8 --> Security" },
 ]
 
 # protect breaking changes from being skipped due to matching a skipping commit_parser
