--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ sshgen = "sshgen.cli:app"
 [tool.poetry.dependencies]
 python = "^3.12"
 ruamel-yaml = ">=0.17.31,<0.19.0"
-typer = "^0.9.0"
+cyclopts = "^2.4.2"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "*"
