chore: update example hosts.yml

--- a/examples/hosts.yml
+++ b/examples/hosts.yml
@@ -19,17 +19,29 @@ group1: # host_group
 
 group2:
   hosts:
+    host5:
+      ansible_host: 172.19.19.19
+      ansible_user: 'host5-user'
+      _meta:
+        _aliases: [ "host5" ]
+
     host3:
       ansible_host: 172.19.0.1
       ansible_user: postgres
       ansible_password:
       ansible_port: 19222
 
+    host6:
+      ansible_host: 172.66.66.66
+      ansible_user: 'host6-user'
+      _meta:
+        _aliases: [ "host6", "immich-app" ]
+
     host4:
         ansible_host: 172.99.99.99
-        ansible_user: postgres
+        ansible_user: 'host4-user'
         _meta:
           _auth_type: IdentityAgent
           _auth_path: ~/.1password/agent.sock
-          _aliases: [ "postgres-server" ]
+          _aliases: [ "postgres-server", "postgres-server", "host-4", "app", "app" ]
           _skip: false
