--- a/examples/hosts.yml
+++ b/examples/hosts.yml
@@ -2,11 +2,11 @@ group1: # host_group
   hosts:
     host1: # host
       ansible_host: 127.0.0.1
-      ansible_user: root
+      ansible_user: "root             "
       _meta:
         _auth_type: IdentityAgent
         _auth_path: ~/.1password/agent.sock
-        _aliases: [ "base", "another-alias" ]
+        _aliases: [ "    base", "another-alias         " ]
         _skip: false
 
     host2:
@@ -20,7 +20,7 @@ group1: # host_group
 group2:
   hosts:
     host5:
-      ansible_host: 172.19.19.19
+      ansible_host: "     172.19.19.19    "
       ansible_user: 'host5-user'
       _meta:
         _aliases: [ "host5" ]
