--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,40 +72,39 @@ preview = true
 
 [tool.ruff.lint]
 select = [
-    "A",    # flake8-builtins
-    "B",    # flake8-bugbear
-    "C4",   # flake8-comprehensions
-    "C90",  # mccabe
-    "E",    # pycodestyle - error
-    "F",    # Pyflakes
-    "G",    # flake8-logging-format
-    "N",    # pep8-naming
-    "Q",    # flake8-quotes
-    "S",    # flake8-bandit
-    "W",    # pycodestyle - warning
-    "EM",   # flake8-errmsg
-    "ARG",  # flake8-unused-arguments
-    "ANN",  # flake8-annotations
-    "BLE",  # flake8-blind-except
-    "COM",  # flake8-commas
-    "FURB", # refurb
-    "LOG",  # flake8-logging
-    "ISC",  # flake8-implicit-str-concat
-    "PL",   # Pylint
-    "PT",   # flake8-pytest-style
-    "PGH",  # pygrep-hooks
-    "PIE",  # flake8-pie
-    "PTH",  # flake8-use-pathlib
-    "PERF", # Perflint
-    "RUF",  # ruff-specific
-    "SLF",  # flake8-self
-    "SIM",  # flake8-simplify
-    "T20",  # flake8-print
-    "TD",   # flake8-todos
-    "TID",  # flake8-tidy-imports
-    "TRY",  # tryceratops
-    "UP",   # pyupgrade
-    "YTT"   # flake8-2020
+  "A",    # flake8-builtins
+  "B",    # flake8-bugbear
+  "C4",   # flake8-comprehensions
+  "C90",  # mccabe
+  "E",    # pycodestyle - error
+  "F",    # Pyflakes
+  "G",    # flake8-logging-format
+  "N",    # pep8-naming
+  "Q",    # flake8-quotes
+  "S",    # flake8-bandit
+  "W",    # pycodestyle - warning
+  "EM",   # flake8-errmsg
+  "ARG",  # flake8-unused-arguments
+  "BLE",  # flake8-blind-except
+  "COM",  # flake8-commas
+  "FURB", # refurb
+  "LOG",  # flake8-logging
+  "ISC",  # flake8-implicit-str-concat
+  "PL",   # Pylint
+  "PT",   # flake8-pytest-style
+  "PGH",  # pygrep-hooks
+  "PIE",  # flake8-pie
+  "PTH",  # flake8-use-pathlib
+  "PERF", # Perflint
+  "RUF",  # ruff-specific
+  "SLF",  # flake8-self
+  "SIM",  # flake8-simplify
+  "T20",  # flake8-print
+  "TD",   # flake8-todos
+  "TID",  # flake8-tidy-imports
+  "TRY",  # tryceratops
+  "UP",   # pyupgrade
+  "YTT",  # flake8-2020
 ]
 ignore = ["ANN101", "ANN204", "ARG001", "UP007", "COM812", "ISC001"]
 
