--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,26 @@
-[tool.poetry]
+[project]
 name = "sshgen"
 version = "0.8.0"
 description = "SSH config generator based on Ansible hosts yaml file"
 license = "Unlicense"
-repository = "https://github.com/pythoninja/sshgen"
-authors = ["pythoninja <pythoninja@users.noreply.github.com>"]
+authors = [
+    { name = "pythoninja", email = "pythoninja@users.noreply.github.com" },
+]
 readme = "README.md"
 keywords = ["ssh", "config", "ansible", "cli", "generator"]
+requires-python = ">=3.12"
+dependencies = [
+  "ruamel-yaml (>=0.17.31,<0.19.0)",
+  "cyclopts (>=2.4.2,<4.0.0)"
+]
 
-[tool.poetry.urls]
+[project.urls]
 "Changelog" = "https://github.com/pythoninja/sshgen/blob/master/CHANGELOG.md"
+repository = "https://github.com/pythoninja/sshgen"
 
-[tool.poetry.scripts]
+
+[project.scripts]
 sshgen = "sshgen.cli:app.meta"
-
-[tool.poetry.dependencies]
-python = "^3.12"
-ruamel-yaml = ">=0.17.31,<0.19.0"
-cyclopts = ">=2.4.2,<4.0.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "*"
