--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,20 +10,19 @@ readme = "README.md"
 keywords = ["ssh", "config", "ansible", "cli", "generator"]
 requires-python = ">=3.12"
 dependencies = [
-  "ruamel-yaml (>=0.17.31,<0.19.0)",
-  "cyclopts (>=2.4.2,<4.0.0)"
+    "ruamel-yaml (>=0.17.31,<0.19.0)",
+    "cyclopts (>=2.4.2,<4.0.0)"
 ]
 
 [project.urls]
 "Changelog" = "https://github.com/pythoninja/sshgen/blob/master/CHANGELOG.md"
 repository = "https://github.com/pythoninja/sshgen"
 
-
 [project.scripts]
 sshgen = "sshgen.cli:app.meta"
 
 [tool.poetry.group.dev.dependencies]
-ruff = "*"
+ruff = ">=0.9.0"
 pre-commit = ">=3.6.2,<5.0.0"
 
 [build-system]
@@ -75,41 +74,48 @@ preview = true
 
 [tool.ruff.lint]
 select = [
-  "A",    # flake8-builtins
-  "B",    # flake8-bugbear
-  "C4",   # flake8-comprehensions
-  "C90",  # mccabe
-  "E",    # pycodestyle - error
-  "F",    # Pyflakes
-  "G",    # flake8-logging-format
-  "N",    # pep8-naming
-  "Q",    # flake8-quotes
-  "S",    # flake8-bandit
-  "W",    # pycodestyle - warning
-  "EM",   # flake8-errmsg
-  "ARG",  # flake8-unused-arguments
-  "BLE",  # flake8-blind-except
-  "COM",  # flake8-commas
-  "FURB", # refurb
-  "LOG",  # flake8-logging
-  "ISC",  # flake8-implicit-str-concat
-  "PL",   # Pylint
-  "PT",   # flake8-pytest-style
-  "PGH",  # pygrep-hooks
-  "PIE",  # flake8-pie
-  "PTH",  # flake8-use-pathlib
-  "PERF", # Perflint
-  "RUF",  # ruff-specific
-  "SLF",  # flake8-self
-  "SIM",  # flake8-simplify
-  "T20",  # flake8-print
-  "TD",   # flake8-todos
-  "TID",  # flake8-tidy-imports
-  "TRY",  # tryceratops
-  "UP",   # pyupgrade
-  "YTT",  # flake8-2020
+    "A", # flake8-builtins
+    "B", # flake8-bugbear
+    "C4", # flake8-comprehensions
+    "C90", # mccabe
+    "E", # pycodestyle - error
+    "F", # Pyflakes
+    "G", # flake8-logging-format
+    "N", # pep8-naming
+    "Q", # flake8-quotes
+    "S", # flake8-bandit
+    "W", # pycodestyle - warning
+    "EM", # flake8-errmsg
+    "ANN", # flake8-annotations
+    "ARG", # flake8-unused-arguments
+    "BLE", # flake8-blind-except
+    "COM", # flake8-commas
+    "FURB", # refurb
+    "LOG", # flake8-logging
+    "ISC", # flake8-implicit-str-concat
+    "PL", # Pylint
+    "PT", # flake8-pytest-style
+    "PGH", # pygrep-hooks
+    "PIE", # flake8-pie
+    "PTH", # flake8-use-pathlib
+    "PERF", # Perflint
+    "RUF", # ruff-specific
+    "SLF", # flake8-self
+    "SIM", # flake8-simplify
+    "T20", # flake8-print
+    "TD", # flake8-todos
+    "TID", # flake8-tidy-imports
+    "TRY", # tryceratops
+    "UP", # pyupgrade
+    "YTT", # flake8-2020
 ]
-ignore = ["ANN101", "ANN204", "ARG001", "UP007", "COM812", "ISC001"]
+ignore = [
+    "UP007",
+    "ANN204",
+    "ARG001",
+    "COM812",
+    "ISC001"
+]
 
 [tool.ruff.lint.pylint]
 max-args = 5
